5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1798_2562.log
== SUBMITION (2019-06-12 11:26:38) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet) > 1):
	npar = 0
	nimpar = 0
	for i in range(size(vet)):
		if(vet[i] % 2 == 0):
			npar = npar + 1
		else:
			nimpar = nimpar + 1

	print(npar)
	print(nimpar)
	print(size(vet))

	vet = array(eval(input("Proximo vetor: ")))



   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
0.892815
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 22
    vet = array(eval(input()))
                             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:26:39) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet) > 1):
	npar = 0
	nimpar = 0
	for i in range(size(vet)):
		if(vet[i] % 2 == 0):
			npar = npar + 1
		else:
			nimpar = nimpar + 1

	print(npar)
	print(nimpar)
	print(size(vet))

	vet = array(eval(input("Proximo vetor: ")))



   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
1.29658
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 22
    vet = array(eval(input()))
                             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:27:16) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet) > 1):
	npar = 0
	nimpar = 0
	for i in range(size(vet)):
		if(vet[i] % 2 == 0):
			npar = npar + 1
		else:
			nimpar = nimpar + 1

	print(npar)
	print(nimpar)
	print(size(vet))

	vet = array(eval(input("Proximo vetor: ")))




   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
File "XXXX", line 23
    vet = array(eval(input()))
                             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:29:06) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet) > 1):
	npar = 0
	nimpar = 0
	for i in range(size(vet)):
		if(vet[i] % 2 == 0):
			npar = npar + 1
		else:
			nimpar = nimpar + 1

	print(npar)
	print(nimpar)
	print(size(vet))

	vet = array(eval(input("Proximo vetor: ")))




   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
0.927902
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 23
    vet = array(eval(input()))
                             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:30:41) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet) > 1):
	npar = 0
	nimpar = 0
	for i in range(size(vet)):
		if(vet[i] % 2 == 0):
			npar = npar + 1
		else:
			nimpar = nimpar + 1

	print(npar)
	print(nimpar)
	print(size(vet))

	vet = array(eval(input("Proximo vetor: ")))



-- EXECUTION TIME:
1.08117
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
18
2
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
